# sharkservers

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.MD  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  generate-module.sh  jailbreak_app.env  mkdocs.yml  openapi.json  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  functionality.yml
.github/workflows/: coverage.yml  docker-image-backend.yml  docker-image-frontend.yml  docker-image.yml  documentation-links.yml  lint.yml  mypy.yml  publish-js-client.yml  test.yml
api/: Makefile  pyproject.toml  pytest.ini
api/migrations/: env.py
api/src/: dependencies.py  handlers.py  main.py  manager.py  services.py  settings.py
api/tests/: auth_test.py  categories_admin_test.py  conftest.py  posts_test.py  (+2 more)
app/: db.py  handlers.py  main.py  schemas.py  settings.py  utils.py
backend/: .env.example  .readthedocs.yml  CHANGELOG.md  docker-compose.prod.yml  mkdocs.yml  pyproject.toml  pytest.ini
changes/: .gitignore
docs/: api.md  contributing.md  index.html  index.md  openapi.json
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  next.config.js  package-lock.json  package.json  tsconfig.json
js-client/: README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json
migrations/: env.py
requests/: api-request.http
scripts/: generate-js-client.sh  generate-openapi-file.sh  release.py  skeleton.57cf553.bash
shark_api/: db.py  handlers.py  main.py
sharkservers/: __init__.py  db.py  dependencies.py  exception_handlers.py  logger.py  main.py  manager.py  middleware.py  schemas.py  services.py  settings.py  utils.py  views.py
sharkservers_api/: main.py  schemas.py  services.py  settings.py  utils.py  views.py
sourcemod-api-client/: main.py  pyproject.toml
sourcemod-api-client/sourcemod_api_client/models/: AdminOut.py  AuthTypeEnum.py  CreateAdminSchema.py  CreateGroupSchema.py  GroupOut.py  GroupOverride_PVT.py  Group_WLC.py  HTTPValidationError.py  Page_AdminOut_.py  Page_GroupOut_.py  UpdateAdminSchema.py  __init__.py
sourcemod-api-client/sourcemod_api_client/services/: admins_groups_service.py  adminss_service.py  async_admins_groups_service.py  async_adminss_service.py
sourcemod_api/: .env.example  alembic.ini  db.py  pyproject.toml
sourcemod_api/migrations/: env.py
sourcemod_api/migrations/versions/: 84f86db71ec9_.py  8f8698d040c3_.py  96598da5b179_.py  a2a2320d065a_.py  b11b0b88b13e_.py  cdae3d3781de_.py  d5e3c62d47e1_.py  f4aecbb18f74_.py
sourcemod_api/src/: db.py  main.py  settings.py
sourcemod_api/src/admins/: dependencies.py  enums.py  models.py  schemas.py  services.py
sourcemod_api/src/admins/views/: admins.py  groups.py
src/: db.py  dependencies.py  enums.py  handlers.py  logger.py  main.py  manager.py  schemas.py  services.py  settings.py  views.py
tests/: auth_test.py  categories_admin_test.py  categories_test.py  conftest.py  main_test.py  posts_test.py  roles_admin_test.py  roles_test.py  scopes_admin_test.py  scopes_test.py  steamprofile_test.py  test_scopes_admin.py  test_sharkservers.py  test_steamprofile.py  test_steamprofile_admin.py  threads_admin_test.py  threads_test.py  users_admin_test.py  users_test.py
(+977 files in other folders)
