[tool.poetry]
name = "shark-api"
version = "1.0.0"
description = ""
authors = ["Adrian Ciołek <ciolek.adrian@protonmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.1"
fastapi-pagination = { extras = ["ormar"], version = "^0.12.4" }
ormar = "^0.12.1"
fastapi-mail = "1.3.1"
alembic = "^1.11.1"
fastapi-events = "^0.9.0"
python-jose = "^3.3.0"
asyncpg = "0.28.0"
psycopg2-binary = "^2.9.6"
pytz = "^2023.3"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
steam = "^1.4.4"
aiocron = "^1.8"
redis = "^4.5.5"
cryptography = "^41.0.4"
python-multipart = "^0.0.6"
pillow = "^10.1.0"
fastapi-limiter = "^0.1.5"
fakeredis = {extras = ["lua"], version = "^2.17.0"}
websockets = "^11.0.3"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.25.0"
wsproto = "^1.2.0"
broadcaster = {extras = ["redis"], version = "^0.2.0"}
stripe = "^6.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
pytest-env = "^0.8.2"
fakeredis = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
